<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".time.FineWeeksActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sprint_review"
            android:textSize="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sprint_goal"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/sprint_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sprint_main"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/sprint_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sprint_learned"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/sprint_learned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sprint_thank"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/sprint_thank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sprint_future"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/sprint_future"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/sprint_stat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sprint_stat"/>

        <Button
            android:id="@+id/sprint_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sprint_finish"/>
    </LinearLayout>

</ScrollView>