<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".time.FineWeekActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/week_intro_goal"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/week_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/week_what"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/week_learned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/week_future"/>

    <EditText
        android:id="@+id/week_future"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

     <Button
         android:id="@+id/week_stat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/week_stat"/>

     <Button
         android:id="@+id/week_end"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/week_end"/>

</LinearLayout>
</ScrollView>