<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".information.GoalActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/content_box1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:text="@string/intro_long_goal"/>
            <EditText
                android:paddingTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title_goal"
                android:hint="@string/intro_short_goal"/>

            <TextView
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_goal_parts"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/title_goal_part1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="1."/>
                <EditText
                    android:id="@+id/title_goal_part2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="2."/>
                <EditText
                    android:id="@+id/title_goal_part3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="3."/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:paddingTop="40dp"
            android:layout_below="@+id/content_box1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"/>


            <Button
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"/>

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit"/>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>